Added images, updated deck

--- a/deck.mdx
+++ b/deck.mdx
@@ -1,5 +1,6 @@
 export { dark as theme } from 'mdx-deck/themes'
 import { Notes } from 'mdx-deck'
+import { SplitRight } from 'mdx-deck/layouts'
 
 # Git good research
 by Scott Bean
@@ -11,9 +12,61 @@ by Scott Bean
 # What is git?
 ![](/img/git.png)
 
-<Notes>
+```notes
 - version control
 - Track changes
 - Built for software development
 - So many more uses now
-</Notes>
+```
+---
+![](/img/git-repo-struct.png)
+```notes
+- .git folder in each repo
+- holds git related stuff
+```
+---
+![](/img/track-change.png)
+---
+# How does git work?
+![](/img/git-flow.svg)
+```notes
+- branches
+- master
+- Dev / feature branches
+```
+---
+
+
+
+export default SplitRight
+
+
+![](/img/merge.png)
+
+# Git Flow
+- Create a branch
+- Make your changes
+- Create a pull request
+- Review
+- Merge
+
+---
+
+export default SplitRight
+
+![](/img/slides.png)
+
+# Markdown
+Plain text markdown language
+- write notes
+- write slides
+- build webpages
+- GitHub documentation
+
+---
+# Get in touch
+📨 s.bean@napier.ac.uk
+
+🦉 @scottlb
+
+🚩 github.com/scottlb
