--- a/deck.mdx
+++ b/deck.mdx
@@ -1,6 +1,6 @@
 export { dark as theme } from 'mdx-deck/themes'
-import { Notes } from 'mdx-deck'
 import { SplitRight } from 'mdx-deck/layouts'
+import { Notes } from 'mdx-deck'
 
 # Git good research
 by Scott Bean
@@ -31,15 +31,12 @@ by Scott Bean
 ![](/img/git-flow.svg)
 ```notes
 - branches
-- master
-- Dev / feature branches
+- master - main branch
+- Dev / feature branches for changes or revisions
 ```
 ---
 
-
-
 export default SplitRight
-
 
 ![](/img/merge.png)
 
@@ -49,9 +46,23 @@ export default SplitRight
 - Create a pull request
 - Review
 - Merge
-
 ---
+# Pull requests
 
+<img src="/img/pr.png" width="500"/>
+
+```notes
+- Pull requests allow discussion and collaberation before merging to master
+```
+---
+# Pull requests
+
+<img src="/img/line-review.png" width="600"/>
+
+```notes
+- You can comment line by line, easy to accept suggested changes
+```
+---
 export default SplitRight
 
 ![](/img/slides.png)
