--- a/deck.mdx
+++ b/deck.mdx
@@ -44,6 +44,7 @@ git tracks changes
 - made of commits
 - a commit is a submitted change
 - commits have messages
+- brances for diffrent confrence papers
 ```
 ---
 
@@ -141,6 +142,37 @@ Plain text markdown language
 ```notes
 - See who has edited what
 - what they have done
+```
+---
+# Projects
+- Kanban style project management
+- Automatically move cards with issues and PR
+---
+![](/img/proj.png)
+```notes
+- Kanban style
+```
+---
+![](/img/proj-issue.png)
+```notes
+- Make an issue
+- Add it to part of the project
+```
+---
+![](/img/proj-auto-issue.png)
+```notes
+- issue gets automatically added to the board
+- closing issues and PR will move them to complete
+```
+---
+# Work with your workflow
+
+```notes
+- Git is designed to work with your current workflow
+- Lots of tools have native github support
+- if they dont its okay
+- use desktop apps or command line
+- overleaf intigrations
 ```
 ---
 # Get in touch
