--- a/deck.mdx
+++ b/deck.mdx
@@ -180,6 +180,15 @@ Plain text markdown language
 - overleaf intigrations
 ```
 ---
+# GitHub Developer pack
+https://education.github.com/teachers
+
+```notes
+- Free plans for students/researchers
+- private repos
+- licences for tools
+```
+---
 # Get in touch
 📨 s.bean@napier.ac.uk
 
